--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+node_modules
 
 # Created by https://www.gitignore.io/api/webstorm
 
@@ -50,5 +51,5 @@ fabric.properties
 
 # *.iml
 # modules.xml
-# .idea/misc.xml 
+# .idea/misc.xml
 # *.ipr
